--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
+    "cloudinary": "^1.32.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.3",
-    "dotenv": "^16.0.3",
-    "multer": "^1.4.5",
-    "cloudinary": "^1.32.0",
-    "cors": "^2.8.5"
+    "multer": "^2.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.10"
   }
 }
